--- a/Project_code_DeepLearningBiomedicalImages.ipynb
+++ b/Project_code_DeepLearningBiomedicalImages.ipynb
@@ -760,7 +760,7 @@
         "rotated_dataset = rotated_dataset.to_dict('records')\n",
         "dataset=train_dicts+rotated_dataset\n",
         "rotation_transf = LoadAndTransform()\n",
-        "dataset = monai.data.CacheDataset(dataset, rotation_transf"
+        "dataset = monai.data.CacheDataset(dataset, rotation_transf)"
       ],
       "metadata": {
         "id": "DXf1iIz19n4j"
